Changelog
=========


2.5.1 (unreleased)
------------------

- Fixed statesyncer: when responsible 'none' is given it should not
  change the responsible.
  Issue #1782 Fehler beim erledigen von mandantenuebergreifenden Aufgaben.
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1782
  [phgross]


2.5 (2012-11-28)
----------------

- Added special condition in issuer display, for forwaring successors.
  [phgross]

- Allow closing for inbox users Feature: Add support for for multiclient tasks.
  [phgross]

- Fixed TaskPostFactoryMenu: works now with every order of the factories.
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

- Made relateddocuments tab safer, when related docs are trashed.
  [phgross]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]



2.4.3 (2012-10-08)
------------------

- Allow the closing-tested transitions also for users from the local inbox group.
  [phgross]

- ResponseTransporter: fixed en-/decoding methods so that they works with lists too.
  [phgross]

2.4.2 (2012-09-25)
------------------

- Update French Translastions.
  [tschanzt]

- Add vdexentries for de.
  [tschanzt]


2.4.1 (2012-09-10)
------------------

- Implements special description for the responsible field in one client gever setups.
  Issue #217 Aufgabe - nur 1 Mandant
  https://extranet.4teamwork.ch/support/ph-vs/tracker/217
  [phgross]

- Statesyncer: Update the localroles on the remote task, when reponsible has changed.
  Issue #1665 Erledigen von mandantenuebergreifenden Aufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1665
  [phgross]

- Fixed error in NoCheckedoutDocsValidator, works now also with None as value.
  Issue #1651 NoCheckedoutDocsValidator wirft Fehler, wenn kein Wert uebergeben wird.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1651/view
  [phgross]

- Fixed request getter in accept_forwarding process.